--- a/style/index.css
+++ b/style/index.css
@@ -24,6 +24,10 @@ body{
     border-radius: 10px;
 }
 
+.margin{
+    margin: 45px 0;
+}
+
 /* Header */
 .container_header {
     max-width: 1200px;
@@ -53,11 +57,10 @@ body{
 /* Main */
 .container_main {
     max-width: 1200px;
-    margin: 3px auto 0;
+    margin: 0 auto;
 }
 
 .spotlight {
-    width: 100%;
     height: 500px;
     background-image: url(../img/banner.jpg);
     background-size: cover;
@@ -83,3 +86,54 @@ body{
     text-align: justify;
     font-size: 17px;
 }
+
+/* Section dell'articolo */
+article header h2{
+    font-size: 45px;
+}
+article header div{
+    font-size: 20px;
+    color: rgb(167, 167, 167);
+}
+
+.column {
+    float: left;
+    width: 20%;
+    height: 100%;
+    margin-top: 45px;
+}
+
+.column:nth-of-type(2){
+    width: calc(60% - 40px);
+    margin: 45px 20px 0;
+}
+
+.column_pic{
+    height: 200px;
+    background-position: center;
+    background-size: cover;
+}
+
+.column p{
+    color:rgb(167, 167, 167);
+    font-size: 18px;
+}
+
+.column h3{
+    font-weight: 500;
+    margin: 20px 0;
+}
+
+#pic1{
+    background-image: url(../img/img-1.jpg);
+}
+
+#pic2{
+    background-image: url(../img/banner-2.jpg);
+}
+
+#pic3{
+    background-image: url(../img/img-3.jpg);
+}
+
+
